--- a/TSmartClinic.Presentation/Views/_ViewImports.cshtml
+++ b/TSmartClinic.Presentation/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using TSmartClinic.Presentation
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TSmartClinic.Presentation   
+
+
