--- a/TSmartClinic.Presentation/Views/Usuarios/Consulta.cshtml
+++ b/TSmartClinic.Presentation/Views/Usuarios/Consulta.cshtml
@@ -46,17 +46,24 @@
                         </div>
 
                         <div class="col-md-2">
-                            <button type="submit" class="btn btn-success" onclick="loading()" style="height: 38px;">
+                            <button type="submit"
+                                    asp-permissao="Usuarios_Acessar"
+                                    class="btn btn-success"
+                                    onclick="loading()"
+                                    style="height: 38px;">
                                 <i class="fa fa-search"></i>&nbsp;Pesquisar
                             </button>
                         </div>
 
                         <div class="col-md-3 text-end">
-                            <a href="~/Usuarios/cadastro" class="btn btn-primary" onclick="loading()" style="height: 38px;">
-                                <i class="fa fa-check"></i>&nbsp;Novo Usuario
+                            <a href="~/Usuarios/cadastro"
+                               asp-permissao="Usuarios_Incluir"
+                               class="btn btn-primary"
+                               onclick="loading()"
+                               style="height: 38px;">
+                                <i class="fa fa-check"></i>&nbsp;Novo Usuário
                             </a>
                         </div>
-
                     </div>
                 }
             </div>
