--- a/TSmartClinic.Presentation/Views/Usuarios/Cadastro.cshtml
+++ b/TSmartClinic.Presentation/Views/Usuarios/Cadastro.cshtml
@@ -43,6 +43,20 @@
 
     <div class="card">
         <div class="card-body">
+            <ul class="nav nav-tabs" role="tablist" id="tabBusca">
+                <li class="nav-item">
+                    <a class="nav-link active" data-bs-toggle="tab" href="#busca_padrao" role="tab">
+                        <span class="d-block d-sm-none"><i class="fas fa-search"></i></span>
+                        <span class="d-none d-sm-block">Dados Gerais</span>
+                    </a>
+                </li>
+                @*  <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#busca_avancada" role="tab">
+                    <span class="d-block d-sm-none"><i class="fas fa-search"></i></span>
+                    <span class="d-none d-sm-block">Busca avançada</span>
+                </a>
+            </li> *@
+            </ul>
             <div class="row mt-4">
                 <div class="col-md-4">
                     <label for="Nome">Nome *</label>
